samples/_failures_safe/1761171619_1ba599_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cfcc1a0.c: In function ‘validate_mesh’:
./samples/SAFE/__tmp_8cfcc1a0.c:136:5: error: expected expression at end of input
  136 |     if (mesh->vertex_count >
      |     ^~
./samples/SAFE/__tmp_8cfcc1a0.c:136:5: error: expected declaration or statement at end of input
